--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "dotenv": "^10.0.0",
@@ -19,11 +18,16 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-elements": "^3.4.2",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-paper": "^4.9.2",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
