--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-elements": "^3.4.2",
+    "react-native-flatlist-slider": "^1.0.6",
+    "react-native-hook-image-slider": "^1.2.1",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-image-slider-box": "^1.1.9",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-paper": "^4.9.2",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
@@ -30,7 +35,8 @@
     "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "metro-react-native-babel-preset": "^0.66.2"
   },
   "private": true
 }
