--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^1.1.9",
     "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-modals": "^0.22.3",
     "react-native-paper": "^4.9.2",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
