--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-animated-loader": "^0.0.9",
+    "react-native-autogrow-textinput": "^5.4.0",
     "react-native-elements": "^3.4.2",
+    "react-native-expand": "^1.0.6",
     "react-native-flatlist-slider": "^1.0.6",
     "react-native-hook-image-slider": "^1.2.1",
     "react-native-image-slider": "^2.0.3",
@@ -35,7 +37,9 @@
     "react-native-side-menu-updated": "^1.3.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
+    "react-native-writebox": "^1.0.9",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0"
