--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
-    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -20,32 +19,16 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-animated-loader": "^0.0.9",
-    "react-native-autogrow-textinput": "^5.4.0",
     "react-native-elements": "^3.4.2",
-    "react-native-expand": "^1.0.6",
-    "react-native-flatlist-slider": "^1.0.6",
-    "react-native-hook-image-slider": "^1.2.1",
-    "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^1.1.9",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-modals": "^0.22.3",
     "react-native-paper": "^4.9.2",
-    "react-native-picker-checkbox": "^2.0.2",
-    "react-native-popup-dialog": "^0.18.3",
-    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-side-menu": "^1.1.3",
-    "react-native-side-menu-updated": "^1.3.2",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1",
-    "react-native-writebox": "^1.0.9",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
