--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-dropdown-picker": "^5.2.3",
     "react-native-elements": "^3.4.2",
     "react-native-image-slider-box": "^1.1.9",
     "react-native-loading-spinner-overlay": "^2.0.0",
@@ -27,6 +28,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-select-dropdown": "^1.5.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1"
