--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -22,6 +23,7 @@
     "react-native": "0.64.2",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-elements": "^3.4.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-slider-box": "^1.1.9",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-modals": "^0.22.3",
